# master_centaurus

./: .gitignore  filament.reg  notes.md
applications/: introduction_figs.ipynb
applications/paper_1/: analysis.ipynb  figs.ipynb  introduction_figs.ipynb  january_meeting_figs.ipynb  radio.ipynb  radio_fits.py  results_figs.ipynb  stellar_continuum.ipynb
applications/vsf/: structure_functions.py  structure_functions_v3.py  structure_functions_v3_pa_alpha.py  structure_functions_v3_stars.py  vsf_tests.py  vsfs.ipynb
notes/A25/: 2025_07_18_jwst_workshop.md  2025_09_04_gm.md  2025_09_04_jonelle_walsh.md  2025_09_16_gm.md  2025_09_23_gm.md  2025_09_29_gm.md  2025_10_10_greg_bryan.md  2025_10_14_gm.md  2025_10_16_jwst_workshop.md  2025_10_21_journal_club.md  2025_10_28_gm.md  2025_10_30_roland_bacon.md  2025_11_04_gm.md  2025_11_11_gm.md  2025_11_13_connor_bottrell_seminar.md  2025_11_13_gary_ferland.md  2025_11_18_gm.md  2025_11_20_gary_ferland.md  2025_11_24_casca_gsc.md  2025_11_24_casca_loc.md  2025_11_25_gm.md  2025_11_4_gm.md  2025_12_02_gm.md  2025_12_04_michael_reefe.md  2025_12_09_gm.md  2025_12_15-16_jwst_workshop.md  2025_12_X_michael_reefe.md
src/base_objects/: mathematical_object.py  silent_none.py
src/coordinates/: celestial_coords.py  ds9_coords.py  fits_coords.py
src/hdu/: cube.py  fits_object.py  grouped_maps.py  header.py  map.py  spectrum.py
src/hdu/arrays/: array.py  array_1d.py  array_2d.py  array_3d.py
src/tools/: loki.py  mask.py  messaging.py  miscellaneous.py  plotting.py
src/tools/statistics/: advanced_stats.py  split_normal.py
src/tools/statistics/stats_library/: CMakeLists.txt  README.md  build.sh  pybind11.cpp  stats.cpp  stats.h  time.cpp  time.h  tools.cpp  tools.h  vsf.cpp  vsf.h
